refs #4987 make sure there is a little gap between the dashboard widget border and the jqplot graph

--- a/plugins/CoreHome/stylesheets/zen-mode.less
+++ b/plugins/CoreHome/stylesheets/zen-mode.less
@@ -103,7 +103,10 @@
   .reportsByDimensionView .entityList {
     margin-left: 13px;
   }
-
+  
+  .widgetContent .jqplot-graph {
+    margin-top: 6px;
+  }
 }
 
 #content:not(.admin){
